--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@irys/sdk": "^0.2.9",
     "body-parser": "^1.20.2",
     "dockerode": "^4.0.2",
     "dotenv": "^16.4.5",
